--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -46,6 +46,7 @@ For a smoother experience, students will receive email notifications about the m
 According to the paper "The World and the Machine" by M.Jackson and P.Zave, in order to correctly describe the application domain, the phenomena involved in it must be identified and categorized. The following table describes the world, shared and the machine phenomena, including the reference to which part controls the phenomena.
 \begin{table}[H]
     \rowcolors{3}{blue!15}{white}
+    \vspace{-2cm}
     \begin{tabular}{|p{9.5cm}|p{2cm}|p{1.5cm}|}
         \hline
         \rowcolor{blue!50}
@@ -86,7 +87,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
         System evaluates timeliness of a submission & M & N \\
         \hline
     \end{tabular}
-    \caption{phenomena table}
+    \caption{Phenomena table}
 \end{table}
 \newpage
 \subsection{Definitions, Acronyms, Abbreviations}
@@ -131,6 +132,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \item {\textbf{Gn:} Goal number “n”}
     \item {\textbf{Dn:} Domain Assumption number “n”}
     \item {\textbf{Rn:} Requirement number “n”}
+    \item {\textbf{UCn:} Use Case number “n”}
 \end{itemize}
 \subsection{Revision History}
 \begin{itemize}
