--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -14,7 +14,7 @@ The main elements contained in Figure \ref{overview_diagram} are:
     \begin{itemize}
         \item Serving static assets (HTML, CSS, JavaScript) to the client, necessary for handling the initial rendering of the UI.
         \item Managing the client-side application and routing.
-        \item Generating API requests to the API Gateway for dynamic data.
+        \item Generating requests directed to the backend system.
     \end{itemize}
     \item \textbf{CKB Distributed System}: the distributed system composed of multiple microservices that implement the core functionalities of the system. Its in charge of the data management, application and integration logic of the whole CKB platform.
     \item \textbf{External Entities}: the CKB Distributed System must be able to integrate with external actors to accomplish its functionalities. The arrow in the diagram highlights the direction of the interaction between the system and the external entities.
