--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -5,8 +5,8 @@ Other important design choices include:
 \begin{itemize}
     \item \textbf{Service Discovery}: A service registry will be used to allow services to locate each other without prior knowledge of their location. This enables efficient communication between services by providing up-to-date information. Service discovery enhances fault tolerance and load balancing, contributing to the overall reliability of the system.
     \item \textbf{API Gateway}: An API gateway will be used to provide a single entry point for clients to access the system. This simplifies the client interface by abstracting the underlying microservices and provides a centralized location for authentication and authorization. The API Gateway enhances security measures, ensuring controlled and secure access to the microservices.
-    \item \textbf{Event-Driven Communication Framework}: An event-driven communication framework will be used to facilitate communication between microservices. This allows services to be loosely coupled, promoting modularity and scalability. The framework enhances the reliability of the system by providing a mechanism for asynchronous communication between services (i.e. queues).
-    \item \textbf{Data Management Strategies}: The system employs tailored data management strategies, utilizing databases suitable for microservices. NoSQL databases are considered for specific services, providing flexibility and scalability. Eventual consistency is embraced for distributed data management, ensuring data isolation and autonomy for individual microservices.
+    \item \textbf{Hybrid Communication Framework}: While most services exploit synchronous communication via REST api calls, an event-driven communication framework is also used to facilitate communication between specific microservices, allowing them to be loosely coupled and promoting both modularity and scalability. This framework enhances the reliability of these services by providing a mechanism for asynchronous communication between them (i.e. queues).
+    \item \textbf{Data Management Strategies}: The system employs tailored data management strategies, utilizing databases suitable for microservices. Both relational and NoSQL databases are considered for each specific service in order to provide flexibility and scalability.
 \end{itemize}
 Incorporating these key properties into the CodeKataBattle system should provide a robust and scalable architecture, ensuring modularity, responsiveness, security, reliability, and effective data management.
 
