fixed use case UC8

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -496,9 +496,10 @@ The main requirements the system has to fulfill are the following:
         \hline
         \textbf{Entry conditions} &
         \begin{itemize}
-            \item A new commit is pushed into some team’s GitHub repository
+            \item Team has forked the battle's repository (once per team)
             \item GitHub Actions workflow is setup (once per team)
             \item Team’s repository is setup in the team’s settings page (once per team)
+            \item A new commit is pushed into team’s GitHub repository
         \end{itemize} \\
         \hline
         \textbf{Event flow} &
