continued DD and fixed minor bugs in RASD

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -112,10 +112,10 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \item {\textbf{Score:} to each solution is assigned a score which is computed taking into account timeliness, functional and static analysis and, eventually, manual score assigned by the educator that created the challenge. The score is a natural number between 0 and 100 (the higher the better)}
     \item {\textbf{Rank:} during a battle, students can visualize the ranking of teams taking part to the battle. Moreover, at the end of each battle, the platform updates the personal tournament score of each student. Specifically, the score is computed as the sum of all the battles scores received in that tournament. This overall score is used to fill out a ranking of all the students participating to the tournament which is accessible by any time and by any user subscribed to the platform}
     \item {\textbf{Notification:} it's an  email alert that is sent to users to inform them that a certain event occurred such as the creation of a new tournament and battle or the publication of the final rank of a battle}
-
 \end{itemize}
 \subsubsection{Acronyms}
 \begin{itemize}
+    \item {\textbf{RASD:} Requirements Analysis and Specification Document}
     \item {\textbf{CKB:} Code Kata Battles}
     \item {\textbf{API:} Application Programming Interface}
     \item {\textbf{UML:} Unified Modeling Language}
@@ -159,5 +159,4 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     representation of it obtained from Alloy Tool.
     }
     \item {\textbf{Section 5: Effort spent}}\\The fifth and last chapter contains the time spent by each contributor of this document.
-
 \end{itemize}
