--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -11,12 +11,70 @@ Other important design choices include:
 Incorporating these key properties into the CodeKataBattle system should provide a robust and scalable architecture, ensuring modularity, responsiveness, security, reliability, and effective data management.
 
 \subsection{Definitions, Acronyms, Abbreviations}
+TODO: remove unused ones
+
 \subsubsection{Definitions}
+\begin{itemize}
+    \item {\textbf{User:} anyone that has registered to the platform}
+    \item {\textbf{Student:} the first kind of users and, basically, the people this product is designed for. Their objective is to submit solutions to battles}
+    \item {\textbf{Team:} students can decide to group up and form a team to partecipate to a battle. The score assigned to the submission of a team will be assigned also to each one of its members}
+    \item {\textbf{Educator:} the second kind of users. They create tournaments, set-up battles, and eventually, evaluate the solutions that teams of students have submitted during the challenge}
+    \item {\textbf{Tournament:} collection of coding exercises (battles) about specific topics of a subject. Interested students can subscribe to it and participate to its battles as soon as they are published}
+    \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
+    \item {\textbf{Code Kata:} description and software project necessary for the battle, including test cases and build automation scripts. These are uploaded by the educator at battle creation time}
+    \item {\textbf{Tournament collaborator:} other educator that is added by the tournament creator to help him in the management of the tournament. He can create battles and evaluate their submissions}
+    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for computer code. It offers both distributed version control and source code management functionalities}
+    \item {\textbf{GitHub repository:} a repository is a storage space where some project files are stored. It can be either public or private. In the context of the platform, each battle is associated with a GitHub repository that is created by the system and shared with the teams}
+    \item {\textbf{GitHub collaborator:} person who is granted access to a GitHub repository with write permission}
+    \item {\textbf{GitHub Actions:} GitHub feature that allows to automate tasks directly on GitHub, such as building and testing code, or deploying applications. In the context of the platform, GitHub Actions is used to automatically notify the system when a new submission is pushed to the repository of a team}
+    \item {\textbf{Test cases:} each battle is associated with a set of test cases, which  are input-output value pairs that describe the correct behavior of the ideal solution}
+    \item {\textbf{Static analysis:} is the analysis of programs performed without executing them, usually achieved by applying formal methods directly to the source code. In the context of the platform this kind of analysis is used to extract additional information about the level of security, reliability and maintainability of a battle submission}
+    \item {\textbf{Functional analysis:} measures the correctness of a solution in terms of passed test cases}
+    \item {\textbf{Timeliness:} measures the time passed between the start of the battle and the last commit of the submission}
+    \item {\textbf{Score:} to each solution is assigned a score which is computed taking into account timeliness, functional and static analysis and, eventually, manual score assigned by the educator that created the challenge. The score is a natural number between 0 and 100 (the higher the better)}
+    \item {\textbf{Rank:} during a battle, students can visualize the ranking of teams taking part to the battle. Moreover, at the end of each battle, the platform updates the personal tournament score of each student. Specifically, the score is computed as the sum of all the battles scores received in that tournament. This overall score is used to fill out a ranking of all the students participating to the tournament which is accessible by any time and by any user subscribed to the platform}
+    \item {\textbf{Notification:} it's an  email alert that is sent to users to inform them that a certain event occurred such as the creation of a new tournament and battle or the publication of the final rank of a battle}
+\end{itemize}
 \subsubsection{Acronyms}
+\begin{itemize}
+    \item {\textbf{DD:} Design Document}
+    \item {\textbf{RASD:} Requirements Analysis and Specification Document}
+    \item {\textbf{CKB:} Code Kata Battles}
+    \item {\textbf{API:} Application Programming Interface}
+    \item {\textbf{UML:} Unified Modeling Language}
+    \item {\textbf{HTML:} HyperText Markup Language}
+    \item {\textbf{CSS:} Cascading Style Sheets}
+    \item {\textbf{JSON:} JavaScript Object Notation}
+    \item {\textbf{OS:} Operating System}
+    \item {\textbf{REST:} REpresentational State Transfer}
+    \item {\textbf{URL:} Uniform Resource Locator}
+    \item {\textbf{HTTPS:} HyperText Transfer Protocol Secure}
+\end{itemize}
 \subsubsection{Abbreviations}
+\begin{itemize}
+    \item {\textbf{Gn:} Goal number “n”}
+    \item {\textbf{Dn:} Domain Assumption number “n”}
+    \item {\textbf{Rn:} Requirement number “n”}
+    \item {\textbf{UCn:} Use Case number “n”}
+\end{itemize}
 
 \subsection{Revision History}
+TODO
 
 \subsection{Reference Documents}
+\begin{itemize}
+    \item Specification document: "Assignment RDD AY 2023-2024"
+    \item DD reference template: "04e.QualitiesAndCreatingDD.pdf"
+    \item UML official specification \href{https://www.omg.org/spec/UML}{https://www.omg.org/spec/UML}
+    \item GitHub API official documentation: \href{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}
+\end{itemize}
 
 \subsection{Document Structure}
+\begin{itemize}
+    \item \textbf{Section 1: Introduction}\\ In this section a general description of the document and the system to be developed is provided. It's also included a glossary of terms used in the document and a list of reference documents.
+    \item \textbf{Section 2: Architectural Design}\\
+    \item \textbf{Section 3: User Interface Design}\\
+    \item \textbf{Section 4: Requirements Traceability}\\
+    \item \textbf{Section 5: Implementation, Integration and Test Plan}\\
+    \item \textbf{Section 6: Effort spent}\\The sixth and last chapter contains the time spent by each contributor of this document.
+\end{itemize}
