continued DD introduction

--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -70,11 +70,12 @@ TODO
 \end{itemize}
 
 \subsection{Document Structure}
+TODO: check if this is enough
 \begin{itemize}
-    \item \textbf{Section 1: Introduction}\\ In this section a general description of the document and the system to be developed is provided. It's also included a glossary of terms used in the document and a list of reference documents.
-    \item \textbf{Section 2: Architectural Design}\\
-    \item \textbf{Section 3: User Interface Design}\\
-    \item \textbf{Section 4: Requirements Traceability}\\
-    \item \textbf{Section 5: Implementation, Integration and Test Plan}\\
+    \item \textbf{Section 1: Introduction}\\ In this section a general description of the document and the system to be developed is provided, also including a glossary of terms used and a list of reference documents.
+    \item \textbf{Section 2: Architectural Design}\\ Here the high-level structure of the software is outlined. This includes the identification of major components, their interactions, and the overall flow of data within the system. Dependencies on external factors or third-party integrations are also detailed, offering a comprehensive view of the software's architecture.
+    \item \textbf{Section 3: User Interface Design}\\ Focused on the end-user experience, this section describes the layout, interactivity, and visual elements of the software's user interface. It includes mockups of the main pages of the web application.
+    \item \textbf{Section 4: Requirements Traceability}\\ Here the relation between software requirements and design elements is highlighted. This is achieved through the use of a traceability matrix.
+    \item \textbf{Section 5: Implementation, Integration and Test Plan}\\ This section is a comprehensive guide that covers the main aspects of the software development lifecycle. It outlines the details of implementation and integration plan, as well as the testing strategy.
     \item \textbf{Section 6: Effort spent}\\The sixth and last chapter contains the time spent by each contributor of this document.
 \end{itemize}
