moved mockups to DD

--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -65,12 +65,16 @@
 {{\section{Introduction}}}
 \label{sect:introduction}
 \input{Files/introduction}
-
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 {{\section{Architectural Design}}}
 \label{sect:architectural}
 \input{Files/architectural.tex}
+%------------------------------------------------------------------------------------------------------------------------------------------------
+\clearpage
+{{\section{User Interface Design}}}
+\label{sect:interface}
+\input{Files/interface.tex}
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 {{\section{Effort Spent}}}
