--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -46,43 +46,46 @@ For a smoother experience, students will receive email notifications about the m
 According to the paper "The World and the Machine" by M.Jackson and P.Zave, in order to correctly describe the application domain, the phenomena involved in it must be identified and categorized. The following table describes the world, shared and the machine phenomena, including the reference to which part controls the phenomena.
 \begin{table}[H]
     \rowcolors{3}{blue!15}{white}
-    \vspace{-2cm}
+    \vspace{-2.5cm}
     \begin{tabular}{|p{9.5cm}|p{2cm}|p{1.5cm}|}
         \hline
         \rowcolor{blue!50}
         Phenomenon & Controlled & Shared \\
         \hline
-        Teachers test their students & W & N \\
-        Evaluator decides to challenge his students & W & N \\
+        Educator decides to challenge his students & W & N \\
         Student wants to improve his coding skills & W & N \\
-        Students may communicate with each other & W & N \\
-        Student invites other student to join his team & W & N \\
-        Student/educator subscribes to the platform & W & Y \\
-        Student/educator logins & W & Y \\
+        Students communicate with each other & W & N \\
+        Student invites another student to join his team & W & N \\
+        Student forks the GitHub repository of the code kata & W & N \\
+        Student setups GitHub Actions workflow on the team's repository & W & N \\
+        Educator reviews team's last submission code & W & N \\
+        User subscribes to the platform & W & Y \\
+        User logs in & W & Y \\
         Educator creates a tournament & W & Y \\
-        Educator adds other educator as tournament collaborator  & W & Y \\
+        Educator adds another educator as tournament collaborator  & W & Y \\
         Educator creates a battle within a tournament & W & Y \\
         Educator closes the battle's consolidation stage & W & Y \\
         Educator terminates a tournament & W & Y \\
         Educator submits manual optional evaluation  & W & Y \\
         Student creates a team & W & Y \\
         Student joins a team & W & Y \\
-        Student checks list of ongoing tournaments and ranks & W & Y \\
-        Student forks the GitHub repository of the code kata & W & Y \\
+        User checks list of ongoing tournaments and ranks & W & Y \\
         Student commits a new submission on GitHub & W & Y \\
         Student checks the updated score of a battle & W & Y \\
         System closes tournament's subscription phase & M & Y \\
         System closes battle's team formation phase & M & Y \\
         System closes battle's submission phase & M & Y \\
-        Platform creates GitHub repository and sends the link to the students of the teams subscribed to the battle & M & Y \\
-        Platform sends notification to users & M & Y \\
+        System creates GitHub repository of the battle & M & Y \\
+        System sends the link of the GitHub repository of the battle to the students & M & Y \\
+        System sends notifications to users & M & Y \\
         System computes and updates battle score of a team & M & Y \\
-        System  updates battle ranking of teams & M & Y \\
+        System updates battle ranking of teams & M & Y \\
         System computes and updates student's tournament personal score & M & Y \\
-        System  updates tournament ranking of students & M & Y \\
-        System evaluates quality level of a submission through static analysis & M & Y \\
+        System updates tournament ranking of students & M & Y \\
+        System evaluates quality level of a submission through static analysis tools & M & Y \\
+        System pulls new submission from GitHub & M & Y \\
         System checks login data & M & N \\
-        System pulls new submission from GitHub & M & N \\
+        System periodically checks for expired deadlines & M & N \\
         System evaluates functional aspects of a submission & M & N \\
         System evaluates timeliness of a submission & M & N \\
         \hline
